<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    card_view:cardCornerRadius="8dp"
    card_view:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp">

        <ImageView
            android:id="@+id/venueImage"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:contentDescription="@string/todo"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/venueName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nama_venue"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="8dp"/>

        <TextView
            android:id="@+id/venueAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alamat_venue"
            android:textSize="14sp"
            android:layout_marginTop="4dp"/>

    </LinearLayout>
</androidx.cardview.widget.CardView>
